test/syntax/success/simple_checkdatasig.cash
contract Test(sig s, pubkey pk) {
    function cds(bytes data) {
        require(checkDataSig(datasig(s), data, pk));
    }
}
