test/syntax/fail/nonvoid_function_call.cash
contract Test() {
    function hello() {
        require(true);
        ripemd160(true);
    }
}
